--- a/01_LESSON/index.html
+++ b/01_LESSON/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html> <!-- Declara que es un documento HTML5 -->
 <html>
+    <head>
+        <meta charset="utf-8"> <!-- Codificación -->
+        <meta name="viewport" content="width=device-width"> <!-- Adapta el ancho a la pantalla del dispositivo -->
+        <title>Portfolio Adolfo Salado</title>
+        <meta name="robot" content="index, follow"> <!-- Google -->
+        <meta name="theme-color" content="#09f"> <!-- Cambia la parte superior del navegador al color indicado -->
+        <link rel="icon" type="image/jpg" href="#"> <!-- FAVICON-->
+        <meta name="description" content="Adolfo Salado - Titulado en Desarrollo de Aplicaciones Multiplataforma"> <!-- Descripción para SEO-->
+    
+    </head>
     <body>
 
         <h1>ENLACES</h1>
