Creación de proyecto: Añadida información HEAD

--- a/01_LESSON/index.html
+++ b/01_LESSON/index.html
@@ -16,7 +16,7 @@
 
         <h2>Imagen con enlace</h2>
         <a href="https://www.linkedin.com/in/adolfo-salado-lópez-925455237">
-            <img src="./img/linkedin.png" style="height: 50px; width: 50px;">
+            <img src="img/linkedin.png" style="height: 50px; width: 50px;">
         </a>
 
         <h2>Enlace que lleva a otro lugar</h2>
