Add secciones: cabecera experiencia y formacion

--- a/02_PRACTICA_HTML/index.html
+++ b/02_PRACTICA_HTML/index.html
@@ -15,5 +15,95 @@
      - Titulado en Desarrollo de Aplicaciones Multiplataforma"> <!-- Descripción para SEO-->
 </head>
 <body>
+
+    
+    <main>
+        <!-- CABECERA -->
+
+        <header id="cabecera">
+            <img
+            id="foto-perfil"
+            src="/" 
+            title="Imagen de Adolfo Salado López"
+            alt="Una imagen de Adolfo Salado vestido de traje y con fondo blanco"
+            width="50"
+            height="50">
+
+            <h1>PORTFOLIO ADOLFO SALADO</h1>
+
+            <nav>
+                
+            </nav>
+
+
+        </header>
+
+
+
+
+        <!-- SECCIÓN EXPERIENCIA-->
+        <section id="experiencia">
+            <header>
+                <h2>Experiencia</h2>
+            </header>
+
+            <article>
+                <header>
+                    <h3>Full Stack Developer</h3>
+                </header>
+                <ul>
+                    <li><strong>Empresa:</strong> Avanade</li>
+                    <li><strong>Tipo de contrato:</strong> FCT - Contrato en prácticas</li>
+                    <li><strong>Duración: </strong> Marzo 2023 - Junio 2023</li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+                    <h3>Administrador de Sistemas</h3>
+                </header>
+                <ul>
+                    <li><strong>Empresa:</strong> Andyko Soft</li>
+                    <li><strong>Tipo de contrato:</strong> FCT - Contrato en prácticas</li>
+                    <li><strong>Duración: </strong> Marzo 2018 - Junio 2018</li>
+                </ul>
+            </article>
+
+
+        </section>
+
+        <!-- SECCIÓN FORMACIÓN -->
+        <section id="formacion">
+            <header>
+                <h2>Formación</h2>
+            </header>
+
+            <article>
+                <header>
+                    <h3>C.F.G.S. Desarrollo de Aplicaciones Multiplataforma</h3>
+                </header>
+
+                <ul>
+                    <li>Año de finalización: 2023</li>
+                    <li>Centro de estudios: CESUR Málaga Este</li>
+                </ul>
+                </article>
+
+            <article>
+                <header>
+                    <h3>C.F.G.S. Administración de Sistemas Informáticos en Red</h3>
+                </header>
+                <ul>
+                    <li>Año de finalización: 2018</li>
+                    <li>Centro de estudios: Sagrada Familia ICET</li>
+                </ul>
+            </article>
+        </section>
+
+        <section id="contacto">
+            <header>Contacto </header>
+
+        </section>
+    </main>
 </body>
 </html>
