Ejemplo HTML completo

--- a/02_PRACTICA_HTML/index.html
+++ b/02_PRACTICA_HTML/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es-ES">
+
 <head>
     <title>Portfolio de Adolfo Salado</title>
 
@@ -14,31 +15,27 @@
     <meta name="description" content="Adolfo Salado
      - Titulado en Desarrollo de Aplicaciones Multiplataforma"> <!-- Descripción para SEO-->
 </head>
+
 <body>
 
-    
+
     <main>
         <!-- CABECERA -->
 
         <header id="cabecera">
-            <img
-            id="foto-perfil"
-            src="/" 
-            title="Imagen de Adolfo Salado López"
-            alt="Una imagen de Adolfo Salado vestido de traje y con fondo blanco"
-            width="50"
-            height="50">
+            <img id="foto-perfil" src="/" title="Imagen de Adolfo Salado López"
+                alt="Una imagen de Adolfo Salado vestido de traje y con fondo blanco" width="50" height="50">
 
             <h1>PORTFOLIO ADOLFO SALADO</h1>
 
             <nav>
-                
+                <a href="#experiencia">Experiencia</a>
+                <a href="#formacion">Formación</a>
+                <a href="#contacto">Contacto</a>
+
             </nav>
 
-
         </header>
-
-
 
 
         <!-- SECCIÓN EXPERIENCIA-->
@@ -87,7 +84,7 @@
                     <li>Año de finalización: 2023</li>
                     <li>Centro de estudios: CESUR Málaga Este</li>
                 </ul>
-                </article>
+            </article>
 
             <article>
                 <header>
@@ -101,9 +98,29 @@
         </section>
 
         <section id="contacto">
-            <header>Contacto </header>
+            <header>
+                <h2>Contacto</h2>
+            </header>
 
+            <div class="circle ">
+                <!-- Imagen LinkedIn-->
+                <a href="https://www.linkedin.com/in/adolfo-salado-l%C3%B3pez-925455237/">
+                    <img id="foto-linkedin" src="./img/linkedin.png" title="Imagen de LinkedIn"
+                        alt="Una imagen de LinkedIn que permite acceder al perfil de Adolfo Salado" width="20px"
+                        height="20px">
+                </a>
+            </div>
+
+            <div class="circle">
+                <!-- Imagen GitHub-->
+                <a href="https://github.com/SaladoDev">
+                    <img id="foto-github" src="./img/github.png" title="Imagen de GitHub"
+                        alt="Una imagen de GitHub que permite acceder al perfil de Adolfo Salado" width="20px"
+                        height="20px">
+                </a>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
